--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import Home from '../components/Home';
-import Solid from '../components/Solid';
+import React from '../components/React'
+import Solid from '../components/Solid'
 ---
 
 <!DOCTYPE html>
@@ -11,7 +11,7 @@ import Solid from '../components/Solid';
 	<title>Document</title>
 </head>
 <body>
-	<Home client:load />
+	<React client:load />
 	<Solid client:idle />
 </body>
 </html>
