--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,4 +17,13 @@ import Solid from "../components/Solid";
 	<style is:global>
 		@layer reset, base, tokens, recipes, utilities;
 	</style>
+	<style is:global>
+		@font-face {
+			font-family: 'mgramm';
+			src: url('/fonts/monogramextended.woff2') format('woff2');
+			font-weight: 500;
+			font-style: normal;
+			font-display: swap;
+		}
+	</style>
 </html>
