--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import { stored } from './stored.json'
     <body>
       <Hero/>
       <Navigation/>
-      <MediaList prefetchedItems={stored.slice(0, 20)} client:only="react"/>
+      <MediaList prefetchedItems={stored.slice(0, 10)} client:only="react"/>
     </body>
     <style is:global>
 			@layer reset, base, tokens, recipes, utilities;
@@ -23,6 +23,8 @@ import { stored } from './stored.json'
     <style is:global>
 			@font-face {
 				font-family: 'mgramm';
+        font-size-adjust: ic-height 1;
+        size-adjust: 150%;
 				src: url('/fonts/monogramextended.woff2') format('woff2');
 				font-weight: 500;
 				font-style: normal;
