~ convert to panda css react components

--- a/src/pages/stored/[id].astro
+++ b/src/pages/stored/[id].astro
@@ -2,9 +2,11 @@
 import type { GetStaticPaths, InferGetStaticParamsType } from 'astro'
 import { stored } from '../stored.json'
 import Layout from '../../layouts/Layout.astro'
-import { css } from '../../../styled-system/css'
-import { container } from '../../../styled-system/patterns/container'
 import { getMediaUrls } from '../../helper/getMediaUrls'
+import { Box, Container, styled } from '../../../styled-system/react'
+const A = styled.a
+const H1 = styled.h1
+const Img = styled.img
 
 export const getStaticPaths = (() => {
   return stored.map((item) => ({ params: { id: item.id } }))
@@ -16,31 +18,29 @@ const media = getMediaUrls(item)
 ---
 
   <Layout>
-    <div class={container({ h: '100dvh', display: 'flex', flexDirection: 'column', justifyContent: 'space-between' })}>
-      <div class={css({ display: 'flex', h: '80dvh', placeContent: 'center' })}>
-        <div>
-          <a href="/" class={css({ fontSize: '4xl' })}>
+    <Container h="100dvh" display="flex" flexDirection="column" justifyContent="space-between">
+      <Box display="flex" h="80dvh" placeContent="center">
+        <Box>
+          <A href="/" fontSize="4xl">
             x
-          </a>
-          <div class={css({ height: '100%', p: '25px' })} style={{ background: `url(${media.pixelUrl})` }}>
-            <img
+          </A>
+          <Box height="100%" p="25px" style={{ background: `url(${media.pixelUrl})` }}>
+            <Img
               data-pixel={media.pixelUrl}
-              class={css({
-                height: '100%',
-                objectFit: 'contain',
-                boxShadow: 'xl',
-              })}
               src={media.cdnUrl}
               alt={item.title}
+              height="100%"
+              objectFit="contain"
+              boxShadow="xl"
             />
-          </div>
-          <a href={`https://www.reddit.com/${item.id}`} class={css({ fontSize: 'xl' })}>
+          </Box>
+          <A href={`https://www.reddit.com/${item.id}`} fontSize="xl">
             [source]
-          </a>
-        </div>
-      </div>
-      <h1 style={{ textAlign: 'center' }}>{item.title}</h1>
-    </div>
+          </A>
+        </Box>
+      </Box>
+      <H1 textAlign="center">{item.title}</H1>
+    </Container>
     <script>
       import mediumZoom from 'https://esm.sh/medium-zoom@1.0.8'
       const img = document.querySelector('img')
