--- a/src/pages/stored/[id].astro
+++ b/src/pages/stored/[id].astro
@@ -44,8 +44,8 @@ const media = getMediaUrls(item)
     <script>
       import mediumZoom from 'https://esm.sh/medium-zoom@1.0.8'
       const img = document.querySelector('img')
-      const  pixel = img.getAttribute('data-pixel')
-      mediumZoom('img', {
+      const pixel = img.getAttribute('data-pixel')
+      mediumZoom(img, {
         background: `url(${pixel})`,
       })
     </script>
